# ClionHomeworkTemplate

./: .gitignore  CMakeLists.txt  README.md  hw1q1.c  hw1q2.c
HomeworkTest/: conftest.py  requirements.txt  test_homework.py
HomeworkTest/homework_resources/: hw1q2in5.txt  hw1q2in6.txt  hw1q2out6.txt
